--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ django = "*"
 djangorestframework = "*"
 django-rest-auth = "*"
 django-allauth = "*"
+coreapi = "*"
+pyyaml = "*"
+django-rest-swagger = "*"
 
 [requires]
 python_version = "3.8"
